--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
+			<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
