--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -5,6 +5,7 @@
 			<!-- link to main stylesheet -->
 			<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="stylesheet" type="text/css" href="/css/syntax.css">
 		</head>
 		<body>
 			<nav>
