--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 			</nav>
 			<div class="container">
 			
+            <h1>{{ page.title }}</h1>
 			{{ content }}
 			
 			</div><!-- /.container -->
